--- a/form-validator/index.html
+++ b/form-validator/index.html
@@ -35,6 +35,6 @@
         </form>
     </div>
 
-    <script src="script" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
